--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,11 +1,24 @@
 $black-var: #121117;
 $white: #ffffff;
 
-$brand-color: #048383;
+$brand-color-dark: #048383;
+$brand-color-light: #45bbbc;
 
 $grey-dark: #5c5e5e;
 $grey-lihht: #aeb0b0;
 $orange-dark: #c86f29;
 $orange-light: #feb169;
-$blue-aqua-dark: #45bbbc;
 $blue-aqua-light: #96fefe;
+
+
+$shark: #1c2224;
+$black-haze: #e8ecea;
+$sea-nymph: #729fa1;
+$smalt-blue: #50828c;
+$cape-palliser: #ac6b44;
+
+$elm: #22918e;
+$cloudy: #a5a09d;
+$elf-green: #078282;
+$limed-spruce: #3d4955;
+$di-serria: #dc945c;
