--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -5,7 +5,7 @@ $brand-color-dark: #048383;
 $brand-color-light: #45bbbc;
 
 $grey-dark: #5c5e5e;
-$grey-lihht: #aeb0b0;
+$grey-light: #aeb0b0;
 $orange-dark: #c86f29;
 $orange-light: #feb169;
 $blue-aqua-light: #96fefe;
