Add section "about" with css

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -19,15 +19,39 @@
 .mt-20 {
     margin-top: 20px;
 }
+.mt-40 {
+    margin-top: 40px;
+}
 
 .ml-20 {
     margin-left: 20px;
 }
 
+.py-120 {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 
 
-.brand-col-dark {
+
+.color-brand-dark {
     color: $brand-color-dark;
+}
+.color-black {
+    color: $black-var;
+}
+
+.band-tag-back {
+    display: inline-block;
+    background-color: rgba(4, 131, 131, 0.3);
+    border-radius: 5px;
+    padding: 5px 15px;
+}
+
+
+
+h2 {
+    font-size: 40px;
 }
 
 
