--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -42,9 +42,23 @@
 .color-brand-light {
     color: $brand-color-light;
 }
+.color-brand-alt-dark {
+    color: $limed-spruce;
+}
+.color-brand-alt-light {
+    color: $blue-aqua-light;
+}
 .color-black {
     color: $black-var;
 }
+.color-white {
+    color: $white;
+}
+.color-grey {
+    color: $cloudy;
+}
+
+
 
 .band-tag-back {
     display: inline-block;
@@ -67,6 +81,15 @@ h2 {
 
 
 
+.logo-txt {
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 20px;
+    background: linear-gradient(90deg, rgba(4, 131, 131, 0.2) 0%, rgba(4, 131, 131, 0.2) 47.8%, rgba(255,255,255,0) 47.8%);
+}
+
+
+
 .btn-main {
     display: inline-block;
     text-transform: uppercase;
@@ -82,8 +105,6 @@ h2 {
     border: 2px solid $brand-color-dark;
     border-radius: 5px;
     padding: 10px 20px;
-    background-color: $white;
-    color: $brand-color-dark;
 }
 
 
@@ -99,7 +120,6 @@ h2 {
     font-weight: bold;
     line-height: 40px;
 }
-
 .circle-back-alt {
     display: inline-block;
     border-radius: 50%;
